# aemet-alerts

./: README.md  demo.ipynb  pyproject.toml
